# Langraph-research-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY_UI.sh  README.md  diagnose_llm_calls.py  docker-compose.yml  main.py  pyproject.toml
.github/agents/: copilot-instructions.md
.github/prompts/: speckit.ship.run.prompt.md
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: __init__.py  main.py
app/agents/: research_agent.py
app/core/: config.py  database.py  errors.py  llm.py  logging.py
app/schemas/: research.py  web_fetch.py
app/services/: health.py  metrics.py  processing_service.py  retrieval_service.py  synthesis_service.py
app/tools/: tavily.py  web_fetch.py
docker/: Dockerfile
docs/: GRADIO_UI_IMPLEMENTATION.md
scripts/: diagnose_full_query.py
specs/001-research-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gradio-research-ui/: constitution-check.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-calm-research-theme/: advanced-styling-guide.md  customization-guide.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-web-fetch-scraping-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/api/: conftest.py  test_depth_variations.py  test_research_endpoint.py
tests/fixtures/: custom_theme_example.py  (+1 more)
ui/: README.md  __init__.py  app.py  models.py
(+59 files in other folders)
