[project]
name = "langraph-research-agent"
version = "0.1.0"
description = "A bounded research agent that accepts user queries, retrieves evidence via Tavily, synthesizes findings into structured research briefs with source traceability and contradiction surfacing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langchain-openrouter>=0.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.4.0",
    "psutil>=6.0.0",
    "redis>=7.4.0",
    "sqlmodel>=0.0.37",
    "structlog>=24.1.0",
    "tavily-python>=0.7.23",
    "uvicorn[standard]>=0.42.0",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.370",
    "black>=24.3.0",
    "ruff>=0.3.5",
]
